# ac-cloud-server-manager

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
locales/: en.yml
qml/: main.qml
qml/components/: Card.qml  CircularGauge.qml  DangerButton.qml  DropdownField.qml  FormField.qml  PrimaryButton.qml  ProfileEditor.qml  ProfileList.qml  SecondaryButton.qml  Sidebar.qml  SidebarButton.qml  SuccessButton.qml  TerminalOutput.qml  Theme.qml  resources.qrc
qml/dialogs/: ConfirmDeleteDialog.qml  DependencyDialog.qml  InstallLogDialog.qml  ProgressDialog.qml  SteamLoginDialog.qml  SteamTwoFactorDialog.qml
qml/views/: ConfigView.qml  DashboardView.qml  ManagementPanel.qml  TracksView.qml  VehiclesView.qml
src/: main.rs
src/core/: config.rs  deps.rs  error.rs  mod.rs  profiles.rs
src/gui/: mod.rs  setup.rs
src/net/: cars.rs  docker.rs  mod.rs  sftp.rs  ssh.rs  stats.rs  stats_polling.rs  tracks.rs
src/utils/: docker_helpers.rs  mod.rs  sftp_helpers.rs  stats_helpers.rs  templates.rs
src/utils/commands/: linux.rs  mod.rs
