[package]
name = "ac-cloud-server-manager"
version = "0.1.0"
edition = "2021"
authors = ["JezSonic"]
description = "Assetto Corsa Cloud Server Manager"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-ini = "0.21"
thiserror = "2.0.18"
futures-util = "0.3.31"
shellexpand = "3.1.0"
uuid = { version = "1.0", features = ["v4"] }
cxx = "1.0"
cxx-qt = "0.8.1"
cxx-qt-lib = "0.8.1"
qmetaobject = "0.2.10"
aes-gcm = "0.10"
keyring = "4.1.2"
hex = "0.4.3"
rust-i18n = "4.1.0"
tokio-stream = "0.1.18"
tar = "0.4.46"
flate2 = "1.1.9"
base64 = "0.22.1"

[target.'cfg(unix)'.dependencies]
bollard = { version = "0.21.0", features = ['ssh']}

[target.'cfg(windows)'.dependencies]
bollard = { version = "0.21.0" }

[build-dependencies]
cxx-qt-build = "0.8.1"
